[tool.poetry]
name = "longest-word"
version = "0.1.0"
description = ""
authors = ["jeanmichel gobet <jmgobet@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^8.3.3"
pylint = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
